--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2",
-    "dotenv": "^14.1.0"
+    "dotenv": "^14.1.0",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.27"
   }
 }
